--- a/index.html
+++ b/index.html
@@ -1,73 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Our Love Letter</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>39 Months of Love</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: #f0f4f8;
+            background: #fce4ec; /* soft pink */
         }
-
         /* Hero Section */
         .hero {
-            background: linear-gradient(to bottom right, #7FB3D5, #F1948A);
+            background: linear-gradient(to bottom right, #7FB3D5, #F48FB1); /* blue to pink */
             color: white;
             text-align: center;
-            padding: 50px 0;
+            padding: 50px 20px;
         }
         .hero h1 {
             font-size: 3em;
             font-family: 'Georgia', serif;
             margin-bottom: 0.5em;
         }
-
+        .hero p {
+            font-size: 1.2em;
+        }
+        
         /* Love Letter Section */
         .letter-section {
-            background: #F9EBEA;
+            background: #F8BBD0; /* light pink */
             padding: 40px 20px;
             text-align: center;
+            color: #2C3E50; /* dark blue */
         }
         .letter-section h2 {
             font-size: 2.5em;
-            color: #2C3E50;
             margin-bottom: 1em;
         }
         .letter-section p {
             font-size: 1.2em;
-            color: #34495E;
             font-family: 'Times New Roman', Times, serif;
             max-width: 800px;
             margin: 0 auto;
             line-height: 1.6;
         }
 
+        /* Removed gallery section since photos are removed */
+
+        /* Footer */
+        .footer {
+            background: #7FB3D5; /* soft blue */
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+        }
+
         /* Navigation Button */
         .navigate-button {
-            background-color: #F1948A;
+            background-color: #F48FB1; /* pink */
             color: white;
             padding: 15px 30px;
             font-size: 1.2em;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            margin-top: 30px;
+            margin: 20px auto 40px;
+            display: inline-block;
             text-decoration: none;
+            transition: background-color 0.3s ease;
         }
         .navigate-button:hover {
-            background-color: #D98880;
-        }
-
-        /* Footer */
-        .footer {
-            background: #2C3E50;
-            color: white;
-            text-align: center;
-            padding: 20px 0;
+            background-color: #ec407a; /* darker pink */
         }
     </style>
 </head>
@@ -75,27 +80,28 @@
 
     <!-- Hero Section -->
     <div class="hero">
-        <h1>Whispers Between Our Hearts</h1>
+        <h1>39 Months of Us, Forever More</h1>
+        <p>Together, we’ve grown, we’ve loved, and we’ve made countless memories.</p>
     </div>
 
     <!-- Love Letter Section -->
     <div class="letter-section">
-        <h2>A Special Letter Just for You</h2>
-        <p>My Love,</p>
-        <p>There’s a magic in the everyday moments we share, in the way you laugh and how we can be completely silent together and still feel so connected. From the very first time we crossed paths, something deep inside me knew this journey would be special — but I never imagined it would be as beautiful as it’s been.</p>
-        <p>These 39 months have flown by in the blink of an eye, but in every second, I’ve found new reasons to love you. I can’t help but smile at all the little memories we’ve created — the inside jokes, the quiet evenings, the simple acts that make life feel full. They’re all woven together into something so uniquely ours.</p>
-        <p>And as I think about all that we’ve experienced together, I can’t help but get excited for everything that’s still ahead. I can’t wait for the future we’ll continue building, hand in hand, side by side.</p>
-        <p>I love you, with all my heart, always and forever.</p>
+        <h2>A Letter to My Love</h2>
+        <p>
+            To my Love,<br>
+            Every moment with you has been like a song from The Ridleys — filled with joy, love, and a bit of longing for even more beautiful days ahead. Just like the lyrics say, "You and me, we’re meant to be," I truly believe that every twist and turn of our journey was meant for us to experience together. In these 39 months, we’ve written our own melody — one that plays softly in my heart, reminding me how lucky I am to have you by my side.<br><br>
+            I wouldn’t trade these months for anything. Every laugh, every tear, every silent moment and every adventure — they’ve all made our love grow stronger. I love you with all that I am, and I’m so excited for the many more songs we’ll share together.
+        </p>
     </div>
 
-    <!-- Navigation Button to Poem Page -->
+    <!-- Navigate Button -->
     <div style="text-align: center;">
-        <a href="saksi.html" class="navigate-button">Follow the Rhymes of Our Heart</a>
+        <a href="index.html" class="navigate-button">Dive deeper into the heart of us.</a>
     </div>
 
     <!-- Footer -->
     <div class="footer">
-        <p>Our love story is just beginning. ❤️</p>
+        <p>Thank you for being my forever. ❤️</p>
     </div>
 
 </body>
