--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     <!-- Navigate Button -->
     <div style="text-align: center;">
-        <a href="letter.html" class="navigate-button">Dive deeper into the heart of us.</a>
+        <a href="poem.html" class="navigate-button">Dive deeper into the heart of us.</a>
     </div>
 
     <!-- Footer -->
